--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: flutter_refresh_loadmore
-description: A refresh loadmore listview package.
+description: A refresh loadmore listview package. can pull refresh listview and loadmore ,use  the libray listview  swrap  form the new widget. you need provider  list length, refreshcallback  loadmorecallback
+             listview item view  etc params,detail in the readme and  example.the example has the code to show how to use it.
 version: 0.1.0
 author: liu wangle<liuwangle1789@gmail.com>
 homepage: https://github.com/liuwangle
