--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,10 @@
 name: flutter_refresh_loadmore
-description: A refresh loadmore listview package. can pull refresh listview and loadmore ,use  the libray listview  swrap  form the new widget. you need provider  list length, refreshcallback  loadmorecallback
-             listview item view  etc params,detail in the readme and  example.the example has the code to show how to use it.
-version: 0.1.0
+description: A refresh loadmore listview package. can pull refresh listview and loadmore ,use  the libray listview  swrap  form the new widget.
+version: 0.1.4
 author: liu wangle<liuwangle1789@gmail.com>
 homepage: https://github.com/liuwangle
+Repository (GitHub): https://github.com/liuwangle/flutter_refresh_loadmore
+
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
